下载基本完成，demo模拟完成，可以开始植入

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation project(path: ':library')
+
+    implementation 'com.github.liyuzero:common:0.0.7'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
